--- a/Yume.Controls/Yume.Controls/Themes/Colors.xaml
+++ b/Yume.Controls/Yume.Controls/Themes/Colors.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!--#region Default Colors-->
     <Color x:Key="DefaultBackgroundHoverColor">#FFF2F2F2</Color>
@@ -99,7 +98,7 @@
     <!--#region CheckBox-->
     <Color x:Key="CheckBoxBorderColor">#FFDBDFE6</Color>
 
-    <!--SolidColorBrush x:Key="CheckBoxBackgroundColorBrush" Color="{StaticResource In}" /-->
+    <!--  SolidColorBrush x:Key="CheckBoxBackgroundColorBrush" Color="{StaticResource In}" /  -->
     <!--#endregion-->
 
     <!--#region Slider-->
